--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 Cython==0.29.21
 dj-database-url==0.5.0
 Django==3.0.2
+django-cors-headers==3.5.0
 django-heroku==0.3.1
 gevent==20.9.0
 greenlet==1.0a1
